--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <main>
         <section class="container">
-            <h2 class="section-title">Top Players</h2>
+            <div class="top-players">
+                <h2 class="section-title">Top Players</h2>
             <div class="players">
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
@@ -43,6 +44,57 @@
                     <img src="images/players/player-6.png" alt="">
                     <h3 class="player-name">Mujahid</h3>
                 </div>
+            </div>
+            </div>
+            <hr>
+            <div class="top-blog">
+                <h2 class="section-title">Top Blog</h2>
+                    <div class="blogs">
+                        <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies
+                            <p class="blog-author"> By <a href="">Danny Sapio</a></p>
+                        </h3>
+                    </div>
+                        </article>
+                        <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">UI cheat sheet: 
+                            list vs grids
+                            <p class="blog-author"> By <a href="">Tess Gadd</a></p>
+                        </h3>
+                    </div>
+                        </article>
+                        <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">7 typography tips 
+                            for interface design
+                            <p class="blog-author"> By <a href="">Jeremiah Lam</a></p>
+                        </h3>
+                    </div>
+                        </article>
+                        <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Your logo is 
+                            copied
+                            <p class="blog-author"> By <a href="">Ferdinand Vogler</a></p>
+                        </h3>
+                    </div>
+                        </article>
+                    </div>
             </div>
         </section>
         
