second-section-added

--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font family starts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <!-- font family ends -->
+    <!-- styles -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- styles -->
+    <!-- awesome fonts starts -->
+    <script src="https://kit.fontawesome.com/966e0d996a.js" crossorigin="anonymous"></script>
+    <!-- awesome fonts ends -->
     <title>Leader Board CSS3</title>
 </head>
 <body>
+    <!-- header start -->
     <header>
 
     </header>
-
+    <!-- header end -->
     <main>
+        <!-- --top players and top blogs -->
         <section class="container">
             <div class="top-players">
                 <h2 class="section-title">Top Players</h2>
@@ -95,6 +104,81 @@
                     </div>
                         </article>
                     </div>
+            </div>
+        </section>
+        <!-- Latest Courses -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>01:30hr
+                        </div>
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">Powerpoint 2022 Master Powerpoint Course</h3>
+                        <p class="course-author">Walter Scott</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>3.2</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>01:20hr
+                        </div>
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The Complete JavaScript Course 2022</h3>
+                        <p class="course-author">Reed Krakoff</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <span>5.0</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>01:50hr
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </section>
         
