--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <hr>
             <div class="top-blog">
-                <h2 class="section-title">Top Blog</h2>
+                <h2 class="section-title">Top Blogs</h2>
                     <div class="blogs">
                         <article class="blog">
                     <div class="thumbnail">
